--- a/KCrafters.css
+++ b/KCrafters.css
@@ -17,14 +17,13 @@ body {
 
 .hand-drawn-box {
     background-image: url("imgs/Box Outline.png");
-    background-size: contain;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
-    width: 400px;
-    height: 300px;
+    width: 1000 px;
+    height: 1200px;
     padding: 20px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
