--- a/KCrafters.css
+++ b/KCrafters.css
@@ -16,19 +16,20 @@ body {
 }
 
 .hand-drawn-box {
-    background-image: url("imgs/Box Outline.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    width: 1000 px;
-    height: 1200px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    position: relative;
+  background-image: url("img/Box Outline.png");
+  background-size: contain; 
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 500px; 
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  box-sizing: border-box;
+  position: relative;
 }
+
 
 .hand-drawn-box p,
 .hand-drawn-box input {
