--- a/KCrafters.css
+++ b/KCrafters.css
@@ -49,7 +49,7 @@ body {
 }
 
 .gametext {
-    background: linear-gradient(to left, #BDE5F7, #E6D4E9);
+    background: radial-gradient(circle, #BDE5F7, #E6D4E9);
     display: flex;
     flex-direction: column;
     align-items: center;
