--- a/KCrafters.css
+++ b/KCrafters.css
@@ -13,6 +13,7 @@ body {
 
 .title-image {
     width: 50%;
+    padding: 20px;
 }
 
 .hand-drawn-box {
@@ -20,8 +21,8 @@ body {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: 500px;
-    height: 600px;
+    width: 800px;
+    height: 1000px;
     align-items: center;
     justify-content: center;
     padding: 20px;
@@ -37,11 +38,11 @@ body {
 }
 
 .hand-drawn-box input[type="text"] {
-    margin-top: 10px;
+    margin-top: 50px;
     padding: 10px;
     border: none;
     border-radius: 5px;
-    width: 80%;
+    width: 60%;
 }
 
 .gametext h1 {
